# gnss-lidar-dataprocessing

./: .gitignore  .gitmodules  IRtoROS2bag.py  README.md  imu2bag.m  main.cpp
IMUtoRosbag/: imu2bag.m  test_timestamp.m
PCAPtoRosbag/: CMakeLists.txt  main.cc
glim_config/: config_ros.json  config_sensors.json  config_sensors_TEST.json
inputs/20250508_132039_APX/: SEPT1280.25P
inputs/20250710_142307_APX/: asterx.nav
outputs/20250508_132039_APX/imu/: metadata.yaml
outputs/20250710_142307_APX/imu/: metadata.yaml
